--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,13 @@
   background-color: rgba(0, 0, 255, 0.644);
   border: 1px solid black;
 }
+
+.img-placeholder {
+  height: 50%;
+  width: 50%;
+  border: 1px solid black;
+  background-color: chartreuse;
+}
 /* ------------------------------------------- */
 
 /* GENERAL------------------------------------ */
@@ -43,16 +50,50 @@ header ul {
   display: none;
   list-style: none;
 }
+
+.demo {
+  display: flex;
+  flex-direction: column;
+ 
+}
 /* ------------------------------------------------------- */
 
 /* --------------------------MAIN------------------------- */
 
 /* section1 */
+.card {
+  width: 100%;
+  height: 350px;
+  margin: 50px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 
 /* -------- */
 
-/* HEADER------------------------------------- */
+/* ------------------------------------------------------- */
+
+
+
 /* ooooooooooooooooooooooooooooooooooooooooooooooooooooooo */
+
+
+/* ooooooooooooo TABLET oooooooooooooooooooooooooooooooooo */
+
+@media screen and (min-width: 768px) {
+
+.big.card {
+  align-items: baseline;
+}
+
+}
+
+
+/* ooooooooooooooooooooooooooooooooooooooooooooooooooooooo */
+
 
 /* ooooooooooooo DESKTOP ooooooooooooooooooooooooooooooooo */
 
