--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,11 @@
   border: 1px solid black;
 }
 
+.debug3 {
+  background-color: rgba(179, 0, 255, 0.644);
+  border: 1px solid black;
+}
+
 .img-placeholder2 {
   height: 300px;
   width: 300px;
@@ -49,6 +54,14 @@
   padding-bottom: 20px;
 }
 
+.testimonial {
+  padding: 40px 0;
+}
+
+.testimonial.card {
+  padding: 40px 0;
+  margin: 30px 0;
+}
 
 /* ------------------------------------------- */
 
@@ -73,6 +86,19 @@
 }
 
 .planning .right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.testimonial>h2,
+.testimonial>h3,
+.testimonial>p {
+  text-align: center;
+}
+
+.testimonial.card {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -122,9 +148,16 @@ header ul {
 /* -------- */
 /* section2 */
 
-
 /* -------- */
 
+
+/* section3 */
+
+.card-text {
+  text-align: center;
+}
+
+/* -------- */
 /* ------------------------------------------------------- */
 
 
@@ -169,11 +202,13 @@ header ul {
   margin-right: 20px;
 }
 /* -------- */
+
 /* section2 */
-
-
-
 /* -------- */
+
+/* section3 */
+/* -------- */
+
 
 /* ------------------------------------------- */
 
