--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,18 @@
   margin: 30px 0;
 }
 
+.work-with-us .card{
+ margin: 30px 0;
+}
+
+.about-us {
+  padding: 30px;
+}
+
+.get-started {
+  padding: 50px 0;
+}
+
 /* ------------------------------------------- */
 
 /* GENERAL------------------------------------ */
@@ -102,6 +114,31 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.work-with-us {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.work-with-us h2 {
+  text-align: center;
+}
+
+.work-with-us .card {
+  width: 100%;
+}
+
+.about-us {
+  display: flex;
+  flex-direction: column;
+}
+
+.get-started {
+  text-align: center;
+}
+.get-started span {
+  display: block;
 }
 /* ------------------------------------------- */
 
@@ -207,6 +244,36 @@ header ul {
 /* -------- */
 
 /* section3 */
+
+.testimonial.card {
+  flex-direction: row;
+}
+/* -------- */
+
+/* section4 */
+.work-with-us h2 {
+  width: 100%;
+}
+.work-with-us {
+  justify-content: space-between;
+}
+.work-with-us .card {
+  width: 48%;
+}
+/* -------- */
+
+/* section5 */
+.about-us {
+  flex-direction: row;
+}
+/* -------- */
+
+/* section6 */
+
+.get-started {
+  max-width: 600px ;
+}
+
 /* -------- */
 
 
@@ -264,7 +331,16 @@ header ul li {
   width: 50%;
 }
 
+/* -------- */
 
+/* section3 */
+
+/* -------- */
+
+/* section4 */
+.work-with-us .card {
+  width: 32%;
+}
 
 /* -------- */
 
