--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,11 @@
   padding: 50px 0;
 }
 
+footer {
+  padding: 30px 0;
+  background-color: darkslategray;
+  color: white;
+}
 /* ------------------------------------------- */
 
 /* GENERAL------------------------------------ */
@@ -139,6 +144,11 @@
 }
 .get-started span {
   display: block;
+}
+
+footer>.container {
+  text-align: center;
+  max-width: 450px ;
 }
 /* ------------------------------------------- */
 
