--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: 'PT Sans', sans-serif;
 }
 
 /* DEBUG--------------------------------------*/
@@ -149,6 +150,28 @@ footer {
 footer>.container {
   text-align: center;
   max-width: 450px ;
+}
+
+/* header */
+header {
+  background-color: #0084fd;
+  color: white;
+}
+header .fa-bars {
+  font-size: 1.3rem ;
+}
+
+header a {
+  text-decoration: none;
+  color: white;
+  font-size: 1.1rem;
+}
+
+header a.btn {
+  background-color: white;
+  border-radius: 40px;
+  color: black;
+  padding: 7px 14px;
 }
 /* ------------------------------------------- */
 
