--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,22 +406,26 @@ header a.btn {
   width: 200px;
   height: 200px;
   margin: 60px 0 20px 0;
-  position: relative;
-  border: 1px solid black;
-}
-.img-container img {
-  
   overflow: hidden;
 }
 
+.about-us .right .right-container {
+  position: relative;
+  height: 200px;
+  width: 200px;
+}
 
 .about-us .fa-quote-left {
   position: absolute;
   color: #9792e4;
   font-size: 3.5rem;
-  right: 85px;
-  top: 65px;
+  right: 0;
+  top: 0;
+
 }
+
+
+
 
 /* ------------------------------------------- */
 
@@ -648,14 +652,14 @@ header ul li {
 
 .planning .container {
   display: flex;
-  flex-direction: row;
   max-width: 800px;
   justify-content: space-between;
  
 }
 
 .planning {
-  padding-bottom: 50px;
+  padding-bottom: 60px;
+  
 }
 
 .planning .right {
@@ -664,7 +668,13 @@ header ul li {
   margin: 0;
   width: 40%;
   
-  
+  padding: 20px 20px 0 20px;
+}
+.planning .right img {
+  width: 70%;
+}
+.planning .right .arrow {
+  margin: 15px 0;
 }
 .planning .left {
   width: 60%;
